# topotide

./: CMakeLists.txt
cli/match/: AbstractChannel.cpp  AbstractChannel.h  AbstractGraph.cpp  AbstractGraph.h  CMakeLists.txt  Context.cpp  Context.h  GraphComputer.cpp  GraphComputer.h  ProgressReporter.cpp  README.md  RiverData.cpp  RiverData.h  main.cpp
lib/: point.cpp  point.h
match/: AbstractChannel.cpp  AbstractChannel.h  AbstractFrame.cpp  AbstractFrame.h  AbstractGraph.cpp  AbstractGraph.h  CMakeLists.txt  ChannelMatching.cpp  ChannelMatching.h  Context.cpp  Context.h  Counters.cpp  Counters.h  DualFrameViewer.cpp  DualFrameViewer.h  Frame.cpp  Frame.h  GraphComputer.cpp  GraphComputer.h  MappingViewer.cpp  MappingViewer.h  MatchResultRenderer.cpp  MatchResultRenderer.h  NetworkConverter.cpp  NetworkConverter.h  NetworkDisplayFrame.cpp  NetworkDisplayFrame.h  NetworkGraphEdgeConnector.cpp  NetworkGraphEdgeConnector.h  ParallelComputer.cpp  ParallelComputer.h  PathFrame.cpp  PathFrame.h  PathMatcher.cpp  PathMatcher.h  PathSimilarityComputer.cpp  PathSimilarityComputer.h  PointSearchTree.cpp  PointSearchTree.h  PreComputedReachNetwork.cpp  (+20 more)
match/utils/: ParallelComputer.hpp  SetStack.hpp  VectorStack.hpp  VectorUtils.hpp
